# rice-settings

./: .gitignore  CMakeLists.txt  Makefile  README.md  conf.yaml.example  configFile.cpp  configFile.h  main.cpp  main.h
.cache/clangd/index/: configFile.cpp.D068B47CC24D8BF1.idx  configFile.h.608F50DA0B61AD8E.idx  main.cpp.4CB0EA45EEC4437F.idx  main.cpp.CA42959E37DC358E.idx  main.h.83DF05BD566FD9DE.idx
data/: Rice Settings.desktop
